# server

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
docs/: index.html  search.js
docs/server/: __init__.html  api.html  db.html  internals.html  main.html  schemas.html
docs/server/api/: user.html
docs/server/db/: conn.html  models.html
migrations/: env.py
migrations/demo-data/: relationships.json  users.json
migrations/versions/: 0113c63ff08e_create_user_relationships_tables_.py  5da2d2875fab_make_users_relationships.py
server/: .flake8  Dockerfile.prod  __init__.py  alembic.ini  internals.py  main.py  pyproject.toml  requirements.txt  schemas.py
server/api/: user.py  users.py
server/api/utils/: user.py  users.py
server/app/: config.py  db.py  main.py
server/app/api/: crud.py  root.py  user.py
server/app/models/: schemas.py  tables.py
server/db/: conn.py  models.py
server/migrations/: env.py
server/migrations/demo-data/: followings.json
server/migrations/versions/: cada1a3b13bd_init_table_add_demo_data.py
server/tests/: test_server.py
tests/: __init__.py  test_server.py
