[tool.poetry]
authors = ["Andras Nagy <andrasnagy097@gmail.com>"]
description = ""
name = "server"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
