[tool.poetry]
authors = ["Andras Nagy <andrasnagy097@gmail.com>"]
description = "Web application"
name = "server"
version = "1.0.0"

[tool.poetry.dependencies]
alembic = "^1.11.1"
asyncpg = "^0.27.0"
fastapi = "^0.99.0"
gunicorn = "^20.1.0"
pydantic = "1.10.10"
python = "^3.11"
sqlalchemy = "^2.0.17"
uvicorn = "^0.20.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.2.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
httpx = "^0.23.3"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pdoc = "^12.3.0"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 79

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
